Change log for zeit.web
=======================

2.2 (unreleased)
----------------

- FIX: Repair css on eilmeldungs article

- MAINT: Make host for image urls configurable


2.1 (2015-09-14)
----------------

- PERF: Re-Enable LazyProxy for ranking areas and try to answer everything
  from the solr result, without resolving ICMSContent

- ZON-1602: Integrate Print and PDF

- ZON-2219: Fix image size in force-mobile

- QUICKFIX: Show correct print link for one page articles


2.0 (2015-09-14)
----------------

- ZON-2070: Tracking follow up

- ZON-2048: Sort'n' paginate gallery area on CPs according to photo CP

- ZON-2084: Add comment cache invalidation

- ZON-2010: Goodbye, Beta badges & links

- MAINT: Polish buzzboard, square teaser and video icon

- HOTFIX: Make community moderation's 'Redaktionsempfehlung' work

- HOTFIX: Make zeit.web modules work with `select_modules` API

- ZON-1848: Repair Netiquette link

- ZON-2217: Repair missing keyword links

- QUICKFIX: Add test for missing keyword links


1.71.1 (2015-09-13)
-------------------

- HOTFIX: Make legacy areas work with `select_modules` API


1.71 (2015-09-13)
-----------------

- ZON-2126: Debounce certain action on comment interface

- ZON-2215: Display article images according to `display_mode` of their layout

- ZON-2069: Refactor topic teaser

- FIX: Position of adtile #2

- FIX: Defected keyword page header

- FIX: Wrong font in advertorial footer

- MAINT: Polish search submit button, breadcrumb and metadata separator

- ZON-2203: Add static cardstack parameter on CPs

- ZON-2090: Rearrange sources on article meta line

- ZON-2118: First stab at teaser for storystreams on CPs


1.70 (2015-09-13)
-----------------

- FIX: Decode sso cookie from API


1.69 (2015-09-12)
-----------------

- MAINT: Update modernizr to v3.0.0

- ZON-2083: Larger article images for twitter & facebook meta

- ZON-2205: Change URL to cached version of adcontroller

- ZON-2177: Rework Meetrics structure for teasers
